Validate ShellsortProficiency code

--- a/AV/Sorting/SSprofHelp.html
+++ b/AV/Sorting/SSprofHelp.html
@@ -10,7 +10,7 @@
 <h1>Shellsort Proficiency Exercise Help Page</h1>
 <p>
 This exercise asks you to reproduce the actions taken by the Shellsort
-algorithm on a random sequence of 10 values.
+algorithm on a random array.
 Initially, you are given the array and a set of increments to use.
 The things that you can do are: click on the array cells to highlight
 those that you want to say make up the current sublist; click on
