--- a/AV/Sorting/ShellsortProficiency.html
+++ b/AV/Sorting/ShellsortProficiency.html
@@ -34,7 +34,7 @@
 	selected, click "Done Selecting". Next, drag and drop the items
 	to sort them. Then click "Done Sorting Sublist" to go on to the next
 	sublist. When you have processed all of the sublists for a given
-	increment, click "Done Increment".
+	increment, click "Done Increment". Click on "Help" for more details.
       </p>
 
       <p>Increments to use:
