--- a/Exercises/Sorting/SelsortMCQwhen.html
+++ b/Exercises/Sorting/SelsortMCQwhen.html
@@ -19,7 +19,7 @@
     <div id="problem-type-or-description">
       <p class="question">When is Selection sort is a good choice to
 	use for	sorting an array?</p>
-      <div class="solution"><var>"When the cost of a swap it large, such as when the records are long strings"</var></div> 
+      <div class="solution"><var>"When the cost of a swap is large, such as when the records are long strings"</var></div> 
       <ul class="choices">
 	<li><var>"Each component of the array requires a small amount of memory"</var></li>
 	<li><var>"The array has only a few elements out of place"</var></li>
