Minor refactoring and commenting in ODSA.js, moved green_check image so it can be used with AVs as well as on modules and updated Sphinx directive to generate new link to image

--- a/Exercises/Sorting/ShellsortMCQ6.html
+++ b/Exercises/Sorting/ShellsortMCQ6.html
@@ -15,7 +15,7 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">What is the best-case cost of Shellsort for an aray whose
+      <p class="question">What is the best-case cost of Shellsort for an array whose
         size n is a power of 2 when using divide-by-twos increments?</p>
       <div class="solution"><var><code>\Theta(n \log n)</code></var></div>
       <ul class="choices" data-show="4" data-none="true">
