Update JSAV to version 0.5.0-40, update the logo.

--- a/AV/Sorting/ShellsortProficiency.html
+++ b/AV/Sorting/ShellsortProficiency.html
@@ -40,9 +40,9 @@
       <p>Increments to use:
 	<input type="text" readonly="readonly" name="incrField"
 	       id="incrField" width="50">
+      <span class="jsavscore" />
       </p>
 
-      <p class="jsavscore" />
 
       <p><b>Input:</b></p>
 
