--- a/Exercises/Sorting/MergeSortMCQ1.html
+++ b/Exercises/Sorting/MergeSortMCQ1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Mergesort Multiple Choice Question 3</title>
+  <title>Mergesort Multiple Choice Question 1</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
@@ -9,25 +9,28 @@
   </script>
   <script>urlBaseOverride = "../../ODSAkhan-exercises/";</script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../JSAV/build/JSAV-min.js"></script>
-  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 </head>
 
 <body>
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <div id="problem-type-or-description">
-	<p class="question"> A disadvantage of Merge sort is:</p>
-      <div class="solution"><var>" None of the above."</var></div>
+      <p class="question">You must merge 2 sorted lists of
+        size <code>m</code> and <code>n</code>, respectively.
+        The number of comparisons needed in the worst case by the
+        merge algorithm will be:</p>
+      <div class="solution"><var><code>m+n-1</code></var></div>
       <ul class="choices">
-	<li><var>"Needs lots of auxiliary storage."</var></li>
-	<li><var>"Its average case running time is O(N^2)."</var></li>
-	<li><var>"All of the above."</var></li>
-	</ul>  
-      
+	<li><var><code>mn</code></var></li>
+	<li><var><code>\max(m,n)</code></var></li>
+	<li><var> <code>\min(m,n)</code></var></li>	  	 
+	<li><var> <code>m+n</code></var></li>	  	 
+      </ul>
+      <div class="hints">
+	<p> Each comparison puts one record in the final sorted array.</p>
+	<p>You don't compare when there is only one record.</p>
+      </div>
     </div>
-	
   </div>
 </div>
 </body>
