--- a/Exercises/Sorting/MergeSortMCQ4.html
+++ b/Exercises/Sorting/MergeSortMCQ4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Mergesort Multiple Choice Question 3</title>
+  <title>Mergesort Multiple Choice Question 4</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
@@ -17,17 +17,17 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <div id="problem-type-or-description">
-	<p class="question"> A disadvantage of Merge sort is:</p>
-      <div class="solution"><var>" None of the above."</var></div>
+      <p class="question">What is the most complicated part of the
+	Mergesort algorithm?</p>
+      <div class="solution">
+	<var>"Merging the sorted halves back together"</var>
+      </div>
       <ul class="choices">
-	<li><var>"Needs lots of auxiliary storage."</var></li>
-	<li><var>"Its average case running time is O(N^2)."</var></li>
-	<li><var>"All of the above."</var></li>
-	</ul>  
-      
+	<li><var>"Finding the midpoint"</var></li>
+	<li><var>"Partitioning the array"</var></li>
+	<li><var>"Achieving the base case"</var></li>
+      </ul>  
     </div>
-	
   </div>
 </div>
 </body>
