--- a/Exercises/Sorting/MergeSortSumm.html
+++ b/Exercises/Sorting/MergeSortSumm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Mergesort Multiple Choice Question 3</title>
+  <title>Mergesort Summary Questions</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
@@ -14,21 +14,8 @@
 </head>
 
 <body>
-<div class="exercise">
-  <div class="problems">
-    <div id="problem-type-or-description">
-      <div id="problem-type-or-description">
-	<p class="question"> A disadvantage of Merge sort is:</p>
-      <div class="solution"><var>" None of the above."</var></div>
-      <ul class="choices">
-	<li><var>"Needs lots of auxiliary storage."</var></li>
-	<li><var>"Its average case running time is O(N^2)."</var></li>
-	<li><var>"All of the above."</var></li>
-	</ul>  
-      
-    </div>
-	
-  </div>
-</div>
+  <div class="exercise" data-name="MergeSortMCQ1" ></div>  
+  <div class="exercise" data-name="MergeSortMCQ4" ></div>  
+  <div class="exercise" data-name="MergeSortMCQ6" ></div>	  
 </body>
 </html>
