Added MCQs for Mergesort, fixed some MCQ bugs, started on cleaning up MergesortPRO mini-exercise

--- a/Exercises/Sorting/InssortMCQcostb.html
+++ b/Exercises/Sorting/InssortMCQcostb.html
@@ -16,7 +16,7 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question">What is the best-case time for
-	Insertionsort to sort an array of <var><code>n</code></var> records?</p>
+	Insertionsort to sort an array of n records?</p>
       <div class="solution"><var><code>\Theta(n)</code></var></div>
       <ul class="choices">
 	<li><var><code>\Theta(n^2)</code></var></li>
