--- a/Exercises/Sorting/MergesortMCQcost.html
+++ b/Exercises/Sorting/MergesortMCQcost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math spin">
 <head>
-  <title>Bubble Sort Question</title>
+  <title>Mergesort Cost Question</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
@@ -17,13 +17,13 @@
     <div id="problem-type-or-description">
       <div class="spin">
         <p class="question">What is the {best|average|worst}-case time for
-	  Bubble Sort to sort an array of n records?</p> 
+	  Mergesort to sort an array of n records?</p> 
       </div>
-      <div class="solution"><var><code>\Theta(n^2)</code></var></div>
+      <div class="solution"><var><code>\Theta(n \log n)</code></var></div>
       <ul class="choices">
 	<li><var><code>\Theta(n)</code></var></li>
 	<li><var><code>\Theta(\log n)</code></var></li>
-	<li><var><code>\Theta(n \log n)</code></var></li>	  	 
+	<li><var><code>\Theta(n^2)</code></var></li>	  	 
 	<li><var><code>\Theta(n^n)</code></var></li>	  	 
       </ul>
 	  <div class="hints">
