--- a/Exercises/Sorting/MergesortMCQwhen.html
+++ b/Exercises/Sorting/MergesortMCQwhen.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>OpenDSA Insertion Sort Exercise: Multiple Choice Question 1</title>
+  <title>Merge Exercise: When</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
@@ -15,15 +15,15 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">When is Insertion Sort a good choice for sorting an array?</p>
-      <div class="solution"><var>"The array has only a few records out of sorted order"</var></div>
+      <p class="question">When is Mergesort a good choice for sorting an array?</p>
+      <div class="solution"><var>"We need a reasonably fast algorithm with a good worst case"</var></div>
         <ul class="choices" data-show="4">
           <li><var>"Each record requires a large amount of memory"</var></li>
           <li><var>"Each record requires a small amount of memory"</var></li>
           <li><var>"The processor speed is fast"</var></li>	  	 
 	  <li><var>"The array contains many records"</var></li>
+	  <li><var>"We need good best-case running time"</var></li>
 	  <li><var>"None of these situations"</var></li>
-	  <li><var>"We need a reasonably fast algorithm with a good worst case"</var></li>
         </ul>
         <div class="hints">
           <p>Remember that insertion sort implementation is made up of two nested for loops.</p>
