--- a/Exercises/Sorting/MergesortMCQworst.html
+++ b/Exercises/Sorting/MergesortMCQworst.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Insertion Sort Question: Worst Case</title>
+  <title>Megesort Question: Worst Case</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
@@ -16,12 +16,12 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question"> In the worst case, the total number of
-        comparisons for Insertion Sort is closest to: </p> 
-      <div class="solution"><var><code>n^2/2</code></var></div>
+        comparisons for Mergesort is closest to: </p> 
+      <div class="solution"><var><code>n \log n</code></var></div>
         <ul class="choices">
           <li><var><code>n</code></var></li>	 	 
           <li><var><code>n^2</code></var></li>	 	 
-          <li><var><code>n \log n</code></var></li>	 	 
+          <li><var><code>n^2/2</code></var></li>	 	 
       </ul>
       <div class="hints">
         <p>Insertion Sort's implementation is made up of two nested for loops.</p>
