--- a/Exercises/Sorting/MergesortSumm.html
+++ b/Exercises/Sorting/MergesortSumm.html
@@ -14,8 +14,13 @@
 </head>
 
 <body>
-  <div class="exercise" data-name="MergeSortMCQ1" ></div>  
-  <div class="exercise" data-name="MergeSortMCQ4" ></div>  
-  <div class="exercise" data-name="MergeSortMCQ6" ></div>	  
+  <div class="exercise" data-name="MergesortMCQ1" ></div>  
+  <div class="exercise" data-name="MergesortMCQ4" ></div>  
+  <div class="exercise" data-name="MergesortMCQ6" ></div>	  
+  <div class="exercise" data-name="MergesortMCQcost" ></div>	  
+  <div class="exercise" data-name="MergesortMCQcomplex" ></div>	  
+  <div class="exercise" data-name="MergesortMCQequal" ></div>	  
+  <div class="exercise" data-name="MergesortMCQstable" ></div>	  
+  <div class="exercise" data-name="MergesortMCQworst" ></div>	  
 </body>
 </html>
