--- a/Exercises/Sorting/SelsortMCQcost.html
+++ b/Exercises/Sorting/SelsortMCQcost.html
@@ -16,8 +16,8 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <div class="spin">
-        <p class="question"> What is the {best|average|worst}-case time for
-	  Selection Sort to sort an array of <var><code>n</code></var> records? </p> 
+        <p class="question">What is the {best|average|worst}-case time for
+	  Selection Sort to sort an array of n records? </p> 
       </div>
       <div class="solution"><var><code>\Theta(n^2)</code></var></div>
       <ul class="choices">
