--- a/Exercises/Sorting/MergesortMCQequal.html
+++ b/Exercises/Sorting/MergesortMCQequal.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Insertion Sort Equal Values Question</title>
+  <title>Mergesort Equal Values Question</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
@@ -15,14 +15,14 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question"> What is the running time of Insertion Sort
+      <p class="question"> What is the running time of Mergesort
 	when the input is an array where all record values are equal? </p> 
-      <div class="solution"><var><code>\Theta(n)</code></var></div>
+      <div class="solution"><var><code>\Theta(n \log n)</code></var></div>
       <ul class="choices">
 	<li><var><code>\Theta(n^2)</code></var></li>
 	<li><var><code>\Theta(\log n)</code></var></li>
-	<li><var><code>\Theta(n \log n)</code></var></li>	 	 
 	<li><var><code>\Theta(n ^ n)</code></var></li>	 	 
+	<li><var><code>\Theta(n)</code></var></li>	 	 
       </ul>
       <div class="hints">
 	<p>Each test in the inner for loop will fail because the
