--- a/Exercises/Sorting/MergesortMCQstable.html
+++ b/Exercises/Sorting/MergesortMCQstable.html
@@ -1,35 +1,32 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Insertion Sort Equal Values Question</title>
+  <title>Mergesort Question: Stable</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
      src="http://cdn.mathjax.org/mathjax/1.1-latest/MathJax.js?config=http://algoviz.org/OpenDSA/ODSAkhan-exercises/KAthJax-77111459c7d82564a705f9c5480e2c88.js">
-  </script>
+</script>
   <script>urlBaseOverride = "../../ODSAkhan-exercises/";</script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-
 <body>
+
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question"> What is the running time of Insertion Sort
-	when the input is an array where all record values are equal? </p> 
-      <div class="solution"><var><code>\Theta(n)</code></var></div>
-      <ul class="choices">
-	<li><var><code>\Theta(n^2)</code></var></li>
-	<li><var><code>\Theta(\log n)</code></var></li>
-	<li><var><code>\Theta(n \log n)</code></var></li>	 	 
-	<li><var><code>\Theta(n ^ n)</code></var></li>	 	 
+      <p class="question">Mergesort (as the code is written in this
+	module) is a stable sorting algorithm. Recall that a stable sorting
+	algorithm maintains the relative order of records with equal keys.</p>
+      <div class="solution"><var>"True"</var></div>
+      <ul class="choices" data-category="true">
+	<li><var>"True"</var></li>
+	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-	<p>Each test in the inner for loop will fail because the
-	  value at position <code>i</code> is never less than the
-	  value at position <code>i-1</code>.</p>
+        <p>What happens when two equal values are compared during merge?</p>
       </div>
-    </div> 	  
+    </div> 
   </div>
 </div>
 </body>
