--- a/AV/Development/heapsort-proficiency.html
+++ b/AV/Development/heapsort-proficiency.html
@@ -47,6 +47,12 @@
     
     function model(modeljsav) {
       modelbh = modeljsav.ds.binheap(initData, {nodegap: 20, compare: function(a, b) { return b - a;}});
+      modelbh.origswap = modelbh.swap; // store original heap grade function
+      // set all steps gradeable that include a swap
+      modelbh.swap = function(ind1, ind2, opts) {
+        this.origswap(ind1, ind2, opts);
+        this.jsav.stepOption("grade", true);
+      };
       modeljsav._undo = [];
       while (modelbh.heapsize() > 1) {
         if (modelbh.heapsize() === initData.length) {
@@ -62,10 +68,10 @@
         modeljsav.step();
         modeljsav.umsg("<br/>..decrement the heap size", {preserve: true});
         modelbh.css(modelbh.heapsize(), {"background-color": "#ddd"})
+        modeljsav.stepOption("grade", true);
         modeljsav.step();
         modeljsav.umsg("<br/>..and restore the heap property", {preserve: true});
         modelbh.heapify(1);
-        modeljsav.stepOption("grade", true);
         modeljsav.umsg("");
         modeljsav.step();
       }
@@ -83,15 +89,16 @@
       if (sIndex === -1) { // if first click
         bh.css(index, {"font-size": "145%"});
         swapIndex.value(index);
+        jsav.step();
       } else { // second click will swap
         bh.swap(sIndex, index, {});
         bh.css([sIndex, index], {"font-size": "100%"});
         swapIndex.value(-1);
+        exercise.gradeableStep();
       }
-      jsav.step();
     }
 
-      var exercise = jsav.exercise(model, init, {css: "background-color"}, {grader: "finder"});
+      var exercise = jsav.exercise(model, init, {css: "background-color"}, {feedback: "continuous"});
       exercise.reset();
     
       $(".jsavcontainer").on("click", ".jsavarray .jsavindex", function() {
@@ -105,7 +112,7 @@
       $("#decrement").click(function() {
         bh.heapsize(bh.heapsize() - 1);
         bh.css(bh.heapsize(), {"background-color": "#ddd"});
-        jsav.step();
+        exercise.gradeableStep();
       });
     </script>
   </body>
