--- a/Exercises/Sorting/InssortMCQ12.html
+++ b/Exercises/Sorting/InssortMCQ12.html
@@ -20,8 +20,9 @@
 	about <code>n^2/4</code>. This means that:</p>
       <div class="solution"><var>"Both of the Above"</var></div>
       <ul class="choices" data-category="true"> <!-- do this to fix order -->
-	<li><var>"The growth rates are the same"</var></li>			  	  	 
-	<li><var>"The runtime in the average case is about half that of the worst case"</var></li>			        <li><var>"Both of the Above"</var></li>
+	<li><var>"The growth rates are the same"</var></li>
+	<li><var>"The runtime in the average case is about half that of the worst case"</var></li>
+	<li><var>"Both of the Above"</var></li>
 	<li><var>"None of the above"</var></li>
       </ul>
       <div class="hints">
