--- a/AV/Development/quicksort-proficiency.html
+++ b/AV/Development/quicksort-proficiency.html
@@ -351,7 +351,7 @@
 		left.value(l.value());
 		right.value(r.value());
 		
-		// Mark the step so that JSAV moves on an expects a new step, not the one we just corrected for the user
+		// Mark the step so that JSAV moves on and expects a new step, not the one we just corrected for the user
 		exercise.gradeableStep();
 	}
 	
