Added several MC questions for Quicksort, and cleaned up some Insertion Sort questions.

--- a/Exercises/Sorting/QuicksortMCQequal.html
+++ b/Exercises/Sorting/QuicksortMCQequal.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Insertion Sort Question</title>
+  <title>Quicksort Equal Values Question</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
      src="http://cdn.mathjax.org/mathjax/1.1-latest/MathJax.js?config=http://algoviz.org/OpenDSA/ODSAkhan-exercises/KAthJax-77111459c7d82564a705f9c5480e2c88.js">
-</script>
+  </script>
   <script>urlBaseOverride = "../../ODSAkhan-exercises/";</script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-<body>
 
+<body>
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">Insertion Sort (as the code is written in this
-	module) is a stable sorting algorithm. Recall that a stable sorting
-	algorithm maintains the relative order of records with equal keys.</p>
-      <div class="solution"><var>"True"</var></div>
-      <ul class="choices" data-category="true">
-	<li><var>"True"</var></li>
-	<li><var>"False"</var></li>			  	  	 
+      <p class="question"> What is the running time of Quicksort
+	when the input is an array where all record values are equal? </p> 
+      <div class="solution"><var><code>\Theta(n^2)</code></var></div>
+      <ul class="choices">
+	<li><var><code>\Theta(n)</code></var></li>
+	<li><var><code>\Theta(\log n)</code></var></li>
+	<li><var><code>\Theta(n \log n)</code></var></li>	 	 
+	<li><var><code>\Theta(n ^ n)</code></var></li>	 	 
       </ul>
       <div class="hints">
-        <p>Think of the behavior of every pass through the inner
-	   for loop of the insertion sort if keys are equal.</p>
+	<p>What does the partition step do?</p>
+	<p>It splits the array into a partition with all values on one side.</p>
+	<p>This is very bad.</p>
       </div>
-    </div> 
+    </div> 	  
   </div>
 </div>
 </body>
