--- a/Exercises/Sorting/QuicksortMCQwhen.html
+++ b/Exercises/Sorting/QuicksortMCQwhen.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Insertion Sort Question: When to Use</title>
+  <title>Quicksort Question: When to Use</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
@@ -15,21 +15,15 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">When is Insertion Sort a good choice for sorting an array?</p>
-      <div class="solution"><var>"The array contains only a few records"</var></div>
+      <p class="question">When is Quicksort a good choice for sorting an array?</p>
+      <div class="solution"><var>"In most standard situations where you want to sort many records."</var></div>
         <ul class="choices" data-show="4">
           <li><var>"Each record requires a large amount of memory"</var></li>
           <li><var>"Each record requires a small amount of memory"</var></li>
           <li><var>"The processor speed is fast"</var></li>	  	 
-	  <li><var>"The array contains many records"</var></li>
 	  <li><var>"None of these situations"</var></li>
+	  <li><var>"We need a reasonably fast algorithm with a good worst case"</var></li>
         </ul>
-        <div class="hints">
-	  <p>Insertion Sort if fairly simple.</p>
-	  <p>Because Insertion Sort is simple, it tends to cost only a
-	  little bit per comparison when compared to more complicated
-	  sorting algorithms.</p>
-        </div>
       </div>
     </div>
   </div>
