--- a/Exercises/Sorting/QuicksortSumm.html
+++ b/Exercises/Sorting/QuicksortSumm.html
@@ -16,5 +16,11 @@
   <div class="exercise" data-name="QuicksortMCQcostb"></div>  
   <div class="exercise" data-name="QuicksortMCQdisadvantage"></div>
   <div class="exercise" data-name="QuicksortMCQpartit"></div>  
+  <div class="exercise" data-name="QuicksortMCQfraction"></div>  
+  <div class="exercise" data-name="QuicksortMCQpcost"></div>
+  <div class="exercise" data-name="QuicksortMCQcomplex"></div>
+  <div class="exercise" data-name="QuicksortMCQequal"></div>
+  <div class="exercise" data-name="QuicksortMCQstable"></div>
+  <div class="exercise" data-name="QuicksortMCQwhen"></div>
 </body>
 </html>
