--- a/Exercises/Sorting/QuicksortMCQcomplex.html
+++ b/Exercises/Sorting/QuicksortMCQcomplex.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Insertion Sort Question: Complexity</title>
+  <title>Quicksort Question: Complexity</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
 <script type="text/javascript"
@@ -17,10 +17,10 @@
     <div id="problem-type-or-description">
       <p class="question">In which cases are the time complexities
 	the same for Insertion Sort?</p>
-      <div class="solution"><var>"Worst and Average only"</var></div>
+      <div class="solution"><var>"Best and Average only"</var></div>
       <ul class="choices">
 	<li><var>"Worst and Best only"</var></li>
-	<li><var>"Best and Average only"</var></li>
+	<li><var>"Worst and Average only"</var></li>
 	<li><var>"Worst, average, and Best"</var></li>	  	 
       </ul>
     </div>
