Fixed validation in quicksort proficiency exercise, moved it to Sorting, updated the RST file and fixed the link to ODSA.js in ShellsortProficiency.html

--- a/AV/Sorting/ShellsortProficiency.html
+++ b/AV/Sorting/ShellsortProficiency.html
@@ -71,7 +71,7 @@
 <script src="../../JSAV/lib/jquery.transform.light.js"></script>
 <script src="../../JSAV/lib/raphael.js"></script>
 <script src="../../JSAV/build/JSAV-min.js"></script>
-<script src="../../RST/source/_static/ODSA.js"></script>
+<script src="../../lib/ODSA.js"></script>
 <script src="ShellsortProficiency.js"></script>
 </body>
 </html>
