--- a/AV/Sorting/quicksortProficiency.html
+++ b/AV/Sorting/quicksortProficiency.html
@@ -1,8 +1,8 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <title>Quicksort Proficiency Exercise</title>
-  <link href="opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="opendsaAV.css" type="text/css" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="quicksortProficiency.css" type="text/css" />
 
