Update some quicksort questions

--- a/Exercises/Sorting/QuicksortSumm.html
+++ b/Exercises/Sorting/QuicksortSumm.html
@@ -22,5 +22,6 @@
   <div class="exercise" data-name="QuicksortMCQequal"></div>
   <div class="exercise" data-name="QuicksortMCQstable"></div>
   <div class="exercise" data-name="QuicksortMCQwhen"></div>
+  <div class="exercise" data-name="QuicksortMCQtime"></div>
 </body>
 </html>
