--- a/AV/Sorting/ShellsortPerformance.html
+++ b/AV/Sorting/ShellsortPerformance.html
@@ -4,42 +4,40 @@
   <title>ShellSort Performance</title>
   <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="quadraticsortAV.css" type="text/css" />
   <link rel="stylesheet" href="ShellsortPerformance.css" type="text/css" />
 </head>
 
 <body>
 <div id="container">
-  <table id="Table1">
-    <td width="800px" align="right">
-      <input type="button" name="about" value="About" />
-    </td>
-  </table>
-  <h1 style="margin-top:-25px">Shellsort Performance</h1>
+  <input type="button" id="about" name="about" value="About" />
+  <h1>Shellsort Performance</h1>
 
   <div id="left">
     <form id="ssperform">
       <p><label for="increments">Increments: Type your increment
                                  series below.</label></p>
-      <input size="50" name="increments" type="text"
+      <input type="text" id="increments" size="50" name="increments"
              placeholder="Space separated values, for example 8 4 2 1" />
       <p>
-        <input type="button" name="run" value="Run" />
-        <input type="button" name="clear" value="Clear" />
+        <input type="button" id="run" name="run" value="Run" />
+        <input type="button" id="clear" name="clear" value="Clear" />
         <label for="arraysize">&nbsp;List size:&nbsp;</label>
-        <input size="5" name="arraysize" type="number" value="64"/>
+        <input size="5" id="arraysize" name="arraysize" type="number" value="64"/>
       </p>
-      <p class="jsavoutput jsavscroll" readonly="readonly"
-         style=""></p>
+      <p class="jsavoutput jsavscroll" readonly="readonly"></p>
     </form>
   </div> <!--left-->
 
   <div id="right">
     <h2>Directions</h2>
     <div id="directions">
-      <p>Type in your desired series of increments, then press
+      <p>
+         Type in your desired series of increments, then press
          "Run". You will then see the cost for Shellsort on your
          set of increments, and also the cost for a regular
-	 Insertion Sort and the cost for the "divide by 2" increments.</p>
+         Insertion Sort and the cost for the "divide by 2" increments.
+      </p>
       <p>Remember that your series should always end in 1.</p>
       <p>You can set the list size. Run this on some bigger lists
          to get a more realistic idea of the costs.</p>
@@ -47,11 +45,9 @@
   </div> <!--right-->
 </div> <!--container-->
 
-<script
-   src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
-</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="../../JSAV/build/JSAV-min.js"></script>
+<script src="../../lib/ODSA.js"></script>
 <script src="ShellsortPerformance.js"></script>
-
 </body>
 </html>
