--- a/AV/Sorting/mergesortProficiency.html
+++ b/AV/Sorting/mergesortProficiency.html
@@ -2,42 +2,35 @@
 <html>
 <head>
   <title>Mergesort Proficiency Exercise</title>
-  <link rel="stylesheet" href="opendsaAV.css" title="CSS" type="text/css" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../opendsaPRO.css" title="CSS" type="text/css" />
   <link rel="stylesheet" href="mergesortProficiency.css" type="text/css" />
 
-  <script
-    src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
-  </script>
-  <script
-    src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js">
-  </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script src="../../JSAV/lib/jquery.transform.light.js"></script>
   <script src="../../JSAV/build/JSAV.js"></script>
 </head>
 
 <body>  
-<div id="container">
-  <table id=tableT style="margin-top: -20px">
+<div id="container" class="container">
+  <table class="headerTable">
     <tr>
-      <td style="width: 125px">&nbsp;</td>
-      <td style="width: 550px" align="center">
-	<p align="center" class="jsavexercisecontrols"></p>
+      <td class="headerLeft">&nbsp;</td>
+      <td class="headerCenter">
+        <p class="jsavexercisecontrols"></p>
       </td>
-      <td style="width: 185px" align="right">
-	<p align="right">
-	  <input type="button" name="help" value="Help" />
-	  <input type="button" name="about" value="About" />
-	  <a class="jsavsettings" href="#">Settings</a>
-	</p>
+      <td class="headerRight">
+        <input type="button" id="help" name="help" value="Help" />
+        <input type="button" id="about" name="about" value="About" />
+        <a id="settings" class="jsavsettings" href="#">Settings</a>
       </td>
     </tr>
   </table>
 
-  <form style="border: 0px" id="mergesort_proficiency">
-    <p style="margin-top:-5px">Instructions:</p>
-    <p style="margin-top: -15px; padding: 10px; 10px;
-	      margin-right: 10px; border: 1px solid black">
+  <form id="mergesortProficiency_form">
+    <p class="instructLabel">Instructions:</p>
+    <p class="instructions">
       Start at the bottom left.  Merge two single element arrays to
       sort a sorted two-element array.  Continue merging until you
       reach an array whose child arrays have not BOTH been sorted.
@@ -49,14 +42,12 @@
       blocks are merged matters so be sure to select the smallest
       blocks first, starting at the left.
     </p>
-			
     <p class="jsavoutput jsavline"></p>
+    <div id="arrays" class="jsavcanvas"></div>
   </form>
-  <div id="arrays" class="jsavcanvas">
-  </div>
 </div> <!-- container -->
   
-<script src="../../RST/source/_static/ODSA.js"></script>
+<script src="../../lib/ODSA.js"></script>
 <script src="mergesortProficiency.js"></script>
 </body>
 </html>
