Split quicksort-av.html into rename HTML, CSS and JS files, renamed quadraticsortAV.css to sortingAV.css because it contains CSS common to all sorting AVs, made appropriate changes in AVs

--- a/AV/Sorting/insertionsortAV.html
+++ b/AV/Sorting/insertionsortAV.html
@@ -4,7 +4,7 @@
   <title>Insertion Sort Visualization</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <link rel="stylesheet" href="quadraticsortAV.css" type="text/css" />
+  <link rel="stylesheet" href="sortingAV.css" type="text/css" />
 </head>
 
 <body>
