--- a/AV/Sorting/mergesortAV.html
+++ b/AV/Sorting/mergesortAV.html
@@ -1,10 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html>
 <html>
 <head>
   <title>Mergesort AV</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="quadraticsortAV.css" type="text/css" />
-  <link rel="stylesheet" href="mergesortAV.css" type="text/css" />
+  <link rel="stylesheet" href="sortingAV.css" type="text/css" />
 </head>
 
 <body>
