--- a/AV/Sorting/mergesortAV.html
+++ b/AV/Sorting/mergesortAV.html
@@ -3,8 +3,8 @@
 <head>
   <title>Mergesort AV</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <link rel="stylesheet" href="quadraticsortAV.css" type="text/css" />
   <link rel="stylesheet" href="sortingAV.css" type="text/css" />
+  <link rel="stylesheet" href="mergesortAV.css" type="text/css" />
 </head>
 
 <body>
