--- a/AV/Sorting/shellsortAV.html
+++ b/AV/Sorting/shellsortAV.html
@@ -4,7 +4,7 @@
   <title>ShellSort AV</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
-  <link rel="stylesheet" href="quadraticsortAV.css" type="text/css" />
+  <link rel="stylesheet" href="sortingAV.css" type="text/css" />
   <link rel="stylesheet" href="shellsortAV.css" type="text/css" />
 </head>
 
