--- a/AV/Sorting/quicksortAV.html
+++ b/AV/Sorting/quicksortAV.html
@@ -3,7 +3,7 @@
 <head>
   <title>Quicksort AV</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <link rel="stylesheet" href="../Sorting/sortingAV.css" type="text/css" />
+  <link rel="stylesheet" href="sortingAV.css" type="text/css" />
   <link rel="stylesheet" href="quicksortAV.css" type="text/css" />
 </head>
 
