--- a/AV/Sorting/mergesortProficiency.html
+++ b/AV/Sorting/mergesortProficiency.html
@@ -3,13 +3,8 @@
 <head>
   <title>Mergesort Proficiency Exercise</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <link rel="stylesheet" href="../opendsaPRO.css" title="CSS" type="text/css" />
+  <link rel="stylesheet" href="../opendsaPRO.css" type="text/css" />
   <link rel="stylesheet" href="mergesortProficiency.css" type="text/css" />
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-  <script src="../../JSAV/lib/jquery.transform.light.js"></script>
-  <script src="../../JSAV/build/JSAV.js"></script>
 </head>
 
 <body>  
@@ -28,7 +23,7 @@
     </tr>
   </table>
 
-  <form id="mergesortProficiency_form">
+  <form id="mergesortProficiency_avc">
     <p class="instructLabel">Instructions:</p>
     <p class="instructions">
       Start at the bottom left.  Merge two single element arrays to
@@ -46,7 +41,11 @@
     <div id="arrays" class="jsavcanvas"></div>
   </form>
 </div> <!-- container -->
-  
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+<script src="../../JSAV/lib/jquery.transform.light.js"></script>
+<script src="../../JSAV/build/JSAV.js"></script>
 <script src="../../lib/ODSA.js"></script>
 <script src="mergesortProficiency.js"></script>
 </body>
