--- a/Exercises/Sorting/ExchangeMCQavg.html
+++ b/Exercises/Sorting/ExchangeMCQavg.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Exchange Sort: Review Questions</title>
+  <title>Exchange Sort Question: Average Inversions</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
@@ -10,15 +10,20 @@
   <script>urlBaseOverride = "../../ODSAkhan-exercises/";</script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
+
 <body>
-  <div class="exercise" data-name="ExchangeMCQ1"></div>
-  <div class="exercise" data-name="ExchangeMCQ2"></div>
-  <div class="exercise" data-name="ExchangeMCQ3"></div>
-  <div class="exercise" data-name="ExchangeMCQavg"></div>
-  <div class="exercise" data-name="ExchangeMCQexchange"></div>
-  <div class="exercise" data-name="ExchangeMCQinver"></div>
-  <div class="exercise" data-name="ExchangeMCQperm"></div>
-  <div class="exercise" data-name="ExchangeMCQswap"></div>
-  <div class="exercise" data-name="ExchangeMCQtotal"></div>
+<div class="exercise">
+  <div class="problems">
+    <div id="problem-type-or-description">
+      <p class="question">The average number of inversions in an array
+      of <code>n</code> records is <code>n(n-1)/4</code>. This is:</p>
+      <div class="solution"><var><code>\Theta(n^2)</code></var></div>
+      <ul class="choices">
+	<li><var>Better than <code>\Theta(n^2)</code></var></li>
+	<li><var>Worse than <code>\Theta(n^2)</code></var></li>
+      </ul>
+    </div> 	  
+  </div>
+</div>
 </body>
 </html>
