Remove separate JS files in exercises, KA is buggy and can't handle that.

--- a/AV/Sorting/ShellsortPerformance.html
+++ b/AV/Sorting/ShellsortPerformance.html
@@ -34,13 +34,14 @@
     <div id="directions">
       <p>
          Type in your desired series of increments, then press
-         "Run". You will then see the cost for Shellsort on your
+         "Run". Remember that your series should always end in 1.</p>
+      <p>You will then see the cost for Shellsort on your
          set of increments, and also the cost for a regular
-         Insertion Sort and the cost for the "divide by 2" increments.
-      </p>
-      <p>Remember that your series should always end in 1.</p>
+         Insertion Sort and the cost for the "divide by 2" increments.</p>
       <p>You can set the list size. Run this on some bigger lists
          to get a more realistic idea of the costs.</p>
+      <p>Your goal should be to come up with an increment series that
+      needs fewer comparisons and swaps than the Divide-by-twos series.
     </div> <!--directions-->
   </div> <!--right-->
 </div> <!--container-->
