--- a/Exercises/Sorting/HeapsortSumm.html
+++ b/Exercises/Sorting/HeapsortSumm.html
@@ -12,11 +12,11 @@
 </head>
 
 <body>
+  <div class="exercise" data-name="HeapsortMCQ3" ></div>  
+  <div class="exercise" data-name="HeapsortMCQcomplex" ></div>  
   <div class="exercise" data-name="HeapsortMCQcost" ></div>  
-  <div class="exercise" data-name="HeapSortMCQequal" ></div>
-  <div class="exercise" data-name="HeapSortMCQ3" ></div>  
-  <div class="exercise" data-name="HeapSortMCQspace" ></div>  
-  <div class="exercise" data-name="HeapSortMCQstable" ></div>  
-  <div class="exercise" data-name="HeapSortMCQcomplex" ></div>  
+  <div class="exercise" data-name="HeapsortMCQequal" ></div>
+  <div class="exercise" data-name="HeapsortMCQspace" ></div>  
+  <div class="exercise" data-name="HeapsortMCQstable" ></div>  
 </body>
 </html>
