--- a/Exercises/Sorting/SelsortMCQwhen.html
+++ b/Exercises/Sorting/SelsortMCQwhen.html
@@ -17,7 +17,7 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">When is Selection sort is a good choice to
+      <p class="question">When is Selection Sort a good choice to
 	use for	sorting an array?</p>
       <div class="solution"><var>"When the cost of a swap is large, such as when the records are long strings"</var></div> 
       <ul class="choices">
